# Lumina

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  bootstrap.ps1  set_vcpkg_root.py  vcpkg.json
Core/: CMakeLists.txt
Core/include/Engine/Core/: Log.h  Window.h
Core/src/: Log.cpp  Window.cpp
Lumina/: CMakeLists.txt  Lumina.cpp
Lumina/Core/: CMakeLists.txt
Lumina/Core/include/Core/: Base.h  Defines.h  Engine.h  EntryPoint.h  Platform.h
Lumina/Core/src/: Engine.cpp
Lumina/Core/src/Math/: Math.h  Matrix.h  Vector.h
Lumina/Core/src/Memory/: Allocator.h
Lumina/Runtime/: CMakeLists.txt
Lumina/Runtime/ScriptAPI/: ScriptAPI.cs  ScriptAPI.csproj  ScriptAPI.runtimeconfig.json
Lumina/Runtime/include/Runtime/: Application.h  EntryPoint.h  RuntimeExports.h  ScriptAPI.h  ScriptEngine.h
Lumina/Runtime/src/: Application.cpp  EntryPoint.cpp  ScriptAPI.cpp  ScriptEngine.cpp
Lumina/Runtime/src/Renderer/Core/: FrameGraph.cpp  FrameGraph.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
Lumina/Runtime/src/Renderer/Debug/: DebugRenderer.cpp  DebugRenderer.h  Gizmos.cpp  Gizmos.h
Lumina/Runtime/src/Renderer/Lighting/: ClusteredShading.cpp  ClusteredShading.h  Lighting.cpp  Lighting.h  Shadows.cpp  Shadows.h
Lumina/Runtime/src/Renderer/NRI/: NRIRenderer.cpp  NRIRenderer.h
Lumina/Runtime/src/Renderer/PostProcess/: Bloom.h  PostProcessing.cpp  PostProcessing.h  Tonemapping.cpp
Lumina/Runtime/src/Renderer/PostProcessing/: Bloom.cpp  Tonemapping.h
Lumina/Runtime/src/Renderer/RayTracing/: AccelerationStructure.cpp  AccelerationStructure.h  HybridRendering.cpp  HybridRendering.h  RayTracingCore.cpp  RayTracingCore.h
Lumina/Runtime/src/Renderer/Rendering/: InstancedRenderer.cpp  InstancedRenderer.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
Lumina/Runtime/src/Renderer/Resources/: Buffer.cpp  Buffer.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
Lumina/Runtime/src/Renderer/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
Lumina/Runtime/src/Renderer/Shaders/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderReflection.cpp  ShaderReflection.h
Lumina/Runtime/src/Renderer/Shading/: MaterialSystem.cpp  MaterialSystem.h  ShaderSystem.cpp  ShaderSystem.h
Lumina/Runtime/src/Renderer/Text/: FontAtlas.cpp  FontAtlas.h  SDFGenerator.cpp  SDFGenerator.h  TextRenderer.cpp  TextRenderer.h
Lumina/ScriptAPI/: CMakeLists.txt
Lumina/ScriptAPI/Managed/: ManagedApp.cs  ManagedApp.csproj
Lumina/ScriptAPI/include/ScriptAPI/: ScriptAPI.h  ScriptEngine.h
Lumina/ScriptAPI/src/: ScriptAPI.cpp  ScriptEngine.cpp
Lumina/Tests/: CMakeLists.txt
Platform/: CMakeLists.txt
Platform/include/Engine/Platform/GLFW/: GLFWWindow.h
Platform/src/GLFW/: GLFWWindow.cpp  GLFWWindowFactory.cpp
Runtime/: CMakeLists.txt
Runtime/include/Engine/Runtime/: Application.h
Runtime/src/: Application.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  SandboxApp.cpp  main.cpp
cmake/: AddNRI.cmake  AsanHelpers.cmake  BuildType.cmake  DetectSanitizer.cmake  EmbedAssembly.cmake  toolchain.cmake
